--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,18 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Homemade+Apple&family=Rock+Salt&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Rock Salt", cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(../src/resources/Wrinkle.jpeg);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.checked {
-  color: rgba(0, 0, 0, 0.233);
-  text-decoration: line-through;
-}
